Add general.css and update index.html, index.css
In this commit:
- Added general.css to contain the general styles for the site.
- Updated index.html to link index.css.
- Updated index.css to import general.css.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-
+  <link rel="stylesheet" href="stylesheets/index.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -20,7 +20,7 @@
       <!-- Sign-up form start -->
       <form action="javascript:void(0);" class="signup__form">
         <h1 class="form__header">Stay updated!</h1>
-        
+
         <h2 class="form__list-header" id="list-header">Join 60,000+ product managers receiving monthly updates on:</h2>
         <ul class="form__list" aria-labelledby="list-header">
           <li class="form__list-item">Product discovery and building what matters</li>
