--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <form action="javascript:void(0);" class="signup__form">
         <h1 class="form__header">Stay updated!</h1>
 
-        <h2 class="form__list-header" id="list-header">Join 60,000+ product managers receiving monthly updates on:</h2>
+        <p class="form__list-header" id="list-header">Join 60,000+ product managers receiving monthly updates on:</p>
         <ul class="form__list" aria-labelledby="list-header">
           <li class="form__list-item">Product discovery and building what matters</li>
           <li class="form__list-item">Measuring to ensure updates are a success</li>
           <li class="form__list-item">And much more!</li>
         </ul>
     
-        <div>
+        <div class="form__input-label-wrapper">
           <label class="form__input-label" for="email">Email address</label>
           <span class="form__error-message" aria-hidden="true" aria-live="assertive" role="alert"></span>
         </div>
@@ -44,7 +44,7 @@
       </div>
   
       <!-- Success message start -->
-      <div class="signup-success" aria-hidden="true">
+      <div class="signup__success" aria-hidden="true">
         <h2 class="success__header">Thanks for subscribing!</h2>
         <p class="success__message">A confirmation email has been sent to ash@loremcompany.com. 
           Please open it and click the button inside to confirm your subscription.</p>
