--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         </div>
         <input class="form__input" id="email" type="email" placeholder="email@company.com" required>
     
-        <button class="form__submit-button">Subscribe to monthly newsletter</button>
+        <button class="form__submit-button">
+          <span>Subscribe to monthly newsletter</span>
+        </button>
       </form>
       <!-- Sign-up form end -->
   
@@ -55,8 +57,8 @@
   </main>
 
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a rel="noopener noreferrer" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a rel="noopener noreferrer" href="https://github.com/CardboardPL">CardboardPL</a>.
   </footer>
 </body>
 </html>
